--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,10 @@
 {
   "require": {
     "cloudgrayau/pitch": "^2.3",
-    "craftcms/ckeditor": "3.5.1",
+    "craftcms/ckeditor": "3.6.0",
     "craftcms/cms": "^4.4.0",
-    "craftcms/contact-form": "3.0.1",
+    "craftcms/contact-form": "^3.0",
+    "craftcms/contact-form-honeypot": "^2.0",
     "verbb/image-resizer": "3.0.7",
     "vlucas/phpdotenv": "^5.4.0"
   },
