--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
     "craftcms/cms": "^4.4.0",
     "craftcms/contact-form": "^3.0",
     "craftcms/contact-form-honeypot": "^2.0",
+    "fortrabbit/craft-copy": "^2.4",
     "vlucas/phpdotenv": "^5.4.0"
   },
   "require-dev": {
@@ -18,13 +19,11 @@
   "config": {
     "allow-plugins": {
       "craftcms/plugin-installer": true,
-      "yiisoft/yii2-composer": true
+      "yiisoft/yii2-composer": true,
+      "fortrabbit/craft-auto-migrate": true
     },
     "sort-packages": true,
-    "optimize-autoloader": true,
-    "platform": {
-      "php": "8.0.2"
-    }
+    "optimize-autoloader": true
   },
   "scripts": {
     "post-root-package-install": [
